# emobots

./: LICENSE  Readme.md  deamon.py  pyproject.toml  random_person.py  random_tinder_person.py
lib/: data.py  emobot.py  random_person.py
src/emobots/: chat.py  data.py  emobot.py  intention.py  mood.py  personas.py  random_person.py  tools.py
tests/: test_openai.py
