[project]
name = "emobots"
version = "0.0.3"
authors = [
  { name="Dirk Fortmeier", email="d.fortmeier@gmail.com" },
]
description = "A small library for creating conversational agents for interactive adventures and chat applications."
readme = "Readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "openai>=1.3.8",
]

[project.urls]
Homepage = "https://github.com/fortmeier/emobots"
Issues = "https://github.com/fortmeier/emobots/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"